--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
                         </div>
 
                         <!---------------------------------------project: code refactor------------------------------------------->
-                        <div id="refactor" class="container d-flex align-items-center flex-column">
+                        <div id="refactor" class="container d-flex align-items-center flex-column min-vh-100">
                             <div class="row w-100 mt-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron pb-2 m-0">
                                         <h2 class="display-3 text-white text-center">code refactor.</h2>
-                                        <div class="call mx-auto m-5 text-white px-md-5 font-weight-normal">
+                                        <img class="d-block rounded-circle mx-auto my-5 img-thumbnail img-fluid" style="height: 200px" style="height: 200px" src="horiseon_img.png" alt="refactored website">
+                                        <div class="call mx-auto mx-5 text-white px-md-5 font-weight-normal">
                                             <p>Using my knowledge of HTML5, <a class="sm-text-decoration-none" href="https://tasha876.github.io/Horiseon-Marketing-Webpage/" target="_blank">I modified a sample website</a>&mdash; making it more more accessible for humans and search engines alike.</p>
                                                 <div class="text-center">
                                                     <a class="p-2 badge-light" href="https://tasha876.github.io/Horiseon-Marketing-Webpage/" target="_blank">Check it out here</a>
@@ -152,12 +153,13 @@
                         </div>
 
                         <!---------------------------------------project: website------------------------------------------->
-                        <div id="website" class="container d-flex align-items-center flex-column">
+                        <div id="website" class="container d-flex align-items-center flex-column min-vh-100">
                             <div class="row w-100 mt-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron pb-2 m-0">
                                         <h2 class="display-3 text-white text-center">this website.</h2>
-                                        <div class="call mx-auto m-5 text-white px-md-5 font-weight-normal">
+                                        <img class="d-block rounded-circle mx-auto my-5 img-fluid img-thumbnail" style="height: 200px; width:200px; object-fit: cover;" src="this_site.png" alt="thumbnail of this site">
+                                        <div class="call mx-auto mx-5 text-white px-md-5 font-weight-normal">
                                             <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
                                                 <div class="text-center">
                                                     <a class="p-2 badge-light" href="#home" target="_blank">Check it out here</a>
@@ -180,13 +182,13 @@
                         </div>
 
                         <!---------------------------------------project: password generator------------------------------------------->
-                        <div id="pass_gen" class="container d-flex align-items-center flex-column">
-                            <div class="row w-100"> 
+                        <div id="pass_gen" class="container d-flex align-items-center flex-column min-vh-100">
+                            <div class="row w-100 mt-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron pb-2 m-0">
                                         <h2 class="display-3 text-white text-center">password generator.</h2>
-                                        <div class="call mx-auto m-5 text-white px-md-5 font-weight-normal">
-                                            <p>I created a simple <a href="yet_to_come.html" target="_blank">password generator.</a> It generates strong passwords using Javascript.</p>
+                                        <img class="d-block rounded-circle mx-auto my-5 img-fluid img-thumbnail" style="height: 200px; width:200px; object-fit: cover;" src="computer.jpg" alt="computer">
+                                        <div class="call mx-auto mx-5 text-white px-md-5 font-weight-normal">                                            <p>I created a simple <a href="yet_to_come.html" target="_blank">password generator.</a> It generates strong passwords using Javascript.</p>
                                             <div class="text-center">
                                                 <a class="p-2 badge-light" href="yet_to_come.html" target="_blank">Check it out here</a>
                                             </div>
@@ -195,7 +197,7 @@
                                 </div>
                             </div>
 
-                            <div class="mt-auto mx-auto w-100 row d-none d-md-block">
+                            <div class="mx-auto w-100 mb-4 row d-none d-md-block">
                                 <div class="col-md-12 text-center">
                                     <a href="#contact" class="text-decoration-none">
                                     <svg width="4em" height="4em" viewBox="0 0 16 16" class="bi bi-arrow-bar-down" fill="#ffffff88" xmlns="http://www.w3.org/2000/svg">
@@ -211,7 +213,7 @@
             </div>
             
             <!---------------------------------------contact------------------------------------------->
-            <div id="contact" class="container d-flex align-items-center flex-column">
+            <div id="contact" class="container d-flex align-items-center flex-column ">
                 <div class="d-flex align-items-center flex-column min-vh-100">
                     <div class="row w-100 mt-auto"> 
                         <div class="col-md-12">
