minor adjustments: added title, fixed HTML errors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!-------------in case I want to use some more fonts-------------->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">        
         <link rel="stylesheet" href="style.css">
-        
+        <title>Natasha Fray | Portfolio</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -130,7 +130,7 @@
                                 <div class="col-md-12">
                                     <div class="jumbotron pb-2 m-0">
                                         <h2 class="display-3 text-white text-center">code refactor.</h2>
-                                        <img class="d-block rounded-circle mx-auto my-5 img-thumbnail img-fluid" style="height: 200px" style="height: 200px" src="horiseon_img.png" alt="refactored website">
+                                        <img class="d-block rounded-circle mx-auto my-5 img-thumbnail img-fluid" style="height: 200px" src="horiseon_img.png" alt="refactored website">
                                         <div class="call mx-auto mx-5 text-white px-md-5 font-weight-normal">
                                             <p>Using my knowledge of HTML5, <a class="sm-text-decoration-none" href="https://tasha876.github.io/Horiseon-Marketing-Webpage/" target="_blank">I modified a sample website</a>&mdash; making it more more accessible for humans and search engines alike.</p>
                                                 <div class="text-center">
@@ -245,7 +245,7 @@
                                     
                                     <div class="call mx-auto m-5 px-5">
                                         <div class="text-center m-5">
-                                            <button class="p-2 badge-light bg-white" role="button" type="submit" value="Send">Let's get in touch</button>
+                                            <button class="p-2 badge-light bg-white" type="submit" value="Send">Let's get in touch</button>
                                         </div>
                                     </div>
                                 </form>
@@ -270,6 +270,6 @@
         </main>
 
         <!---------------------------------------footer------------------------------------------->
-        <footer class="page-footer fixed-bottom w-100 m-0 p-0"><div class = "container-fluid"><span class="float-right text-white-50 p-1">&copy Copyright 2020</span></div></footer>
+        <footer class="page-footer fixed-bottom w-100 m-0 p-0"><div class = "container-fluid"><span class="float-right text-white-50 p-1">&copy; Copyright 2020</span></div></footer>
     </body>
 </html>
