made fixes to image resizing

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             <h2 class="display-3 display-md-4 text-dark text-center">servicely.</h2>
                                             <div class="row">
                                                 <div class="frame col-md-6 img-fluid">
-                                                    <img class="d-block text-dark img-fluid" src="this_site.png" alt="thumbnail of this site">
+                                                    <img class="d-block text-dark" src="this_site.png" alt="thumbnail of this site">
                                                 </div>
                                             <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                                 <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
