made slight change to when sunrise 'rises'

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                                 <div class="col-md-12">
                                     <div class="jumbotron pb-2 m-0">
                                         <h1 class="display-3 text-dark text-center">Here's what I've done.</h1> 
+                                        <div class="project-list text-center">
+                                            <h3 class="d-inline"><a class="text-nowrap" href="#servicely">servicely</a></h3>
+                                            <h3 class="d-inline"><a class="text-nowrap" href="#pass-gen">password generator</a></h3>
+                                            <h3 class="d-inline"><a class="text-nowrap" href="#employee-summary">employee summary</a></h3>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -93,19 +98,19 @@
 
                         <!---------------------------------------project: servicely------------------------------------------->
                         <div id="projects">
-                            <article id="website" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
+                            <article id="servicely" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
                                 <div class="row w-100 my-auto"> 
                                     <div class="col-md-12">
                                         <div class="jumbotron py-3 m-0">
                                             <h2 class="display-3 display-md-4 text-dark text-center">servicely.</h2>
                                             <div class="row">
                                                 <div class="frame col-md-6 img-fluid">
-                                                    <img class="d-block text-dark" src="this_site.png" alt="thumbnail of this site">
+                                                    <img class="d-block text-dark" src="../Project-1-/assets/images/main-screen.png" alt="thumbnail of this site">
                                                 </div>
                                             <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                                 <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
                                                     <div class="text-center">
-                                                        <a class="p-2 badge-light" href="#home" target="_blank">Check it out here</a>
+                                                        <a class="p-2" href="#home" target="_blank">Check it out here</a>
                                                     </div>
                                             </div>
                                             </div>
@@ -115,7 +120,7 @@
                             </article>
 
                         <!---------------------------------------project: password generator------------------------------------------->
-                        <article id="website" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
+                        <article id="pass-gen" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
                             <div class="row w-100 my-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron py-3 m-0">
@@ -127,7 +132,7 @@
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 badge-light" href="#home" target="_blank">Check it out here</a>
+                                                    <a class="p-2 " href="#home" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -136,8 +141,8 @@
                             </div>
                         </article>
 
-                        <!---------------------------------------project: password generator------------------------------------------->
-                        <article id="website" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
+                        <!---------------------------------------project: Employee Summary------------------------------------------->
+                        <article id="employee-summary" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
                             <div class="row w-100 my-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron py-3 m-0">
@@ -149,7 +154,7 @@
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 badge-light" href="#home" target="_blank">Check it out here</a>
+                                                    <a class="p-2 " href="#home" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -196,7 +201,7 @@
                                     
                                     <div class="call mx-auto m-5 px-5">
                                         <div class="text-center m-5">
-                                            <button class="p-2 badge-dark bg-white" type="submit" value="Send">Let's get in touch</button>
+                                            <button class="p-2  bg-white" type="submit" value="Send">Let's get in touch</button>
                                         </div>
                                     </div>
                                 </form>
@@ -208,7 +213,7 @@
             </section>
         </main>
         <!---------------------------------------footer------------------------------------------->
-        <footer class="page-footer fixed-bottom w-100 m-0 p-0"><div class = "container-fluid"><span class="float-right text-dark p-1">&copy; Copyright 2020</span></div></footer>
+        <footer class="page-footer fixed-bottom w-100 m-0 p-0"><div class = "container-fluid p-0"><span class="float-right text-dark p-1">&copy; Copyright 2020</span></div></footer>
     </body>
     <script src="script.js"></script>
 </html>
