added some images basically

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="nav navbar-nav ">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link stroke" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about_me">About Me</a>
@@ -104,12 +104,12 @@
                                             <h2 class="display-3 display-md-4 text-dark text-center">servicely.</h2>
                                             <div class="row">
                                                 <div class="frame col-md-6 img-fluid">
-                                                    <img class="d-block text-dark" src="../Project-1-/assets/images/main-screen.png" alt="thumbnail of this site">
+                                                    <img class="d-block text-dark" src="Servicely.png" alt="thumbnail of this site">
                                                 </div>
                                             <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
-                                                <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
+                                                <p>Working with a team, we created <a class="sm-text-decoration-none" href="https://tasha876.github.io/Servicely/index.html" target="_blank">Servicely</a> &mdash; an app that helps you either find help when your in need or help if you're feeling generous.</p>
                                                     <div class="text-center">
-                                                        <a class="p-2" href="#home" target="_blank">Check it out here</a>
+                                                        <a class="p-2" href="https://tasha876.github.io/Servicely/index.html" target="_blank">Check it out here</a>
                                                     </div>
                                             </div>
                                             </div>
@@ -126,12 +126,12 @@
                                         <h2 class="display-3 display-md-4 text-dark text-center">password generator.</h2>
                                         <div class="row">
                                             <div class="frame col-md-6 img-fluid">
-                                                <img class="d-block text-dark img-fluid" src="this_site.png" alt="thumbnail of this site">
+                                                <img class="d-block text-dark img-fluid" src="password-generator.png" alt="thumbnail of this site">
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
-                                            <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
+                                            <p>I created a simple <a href="https://tasha876.github.io/Password-Generator/" target="_blank">password generator.</a> It generates strong passwords using Javascript.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href="#home" target="_blank">Check it out here</a>
+                                                    <a class="p-2 " href="https://tasha876.github.io/Password-Generator/" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -145,15 +145,15 @@
                             <div class="row w-100 my-auto"> 
                                 <div class="col-md-12">
                                     <div class="jumbotron py-3 m-0">
-                                        <h2 class="display-3 display-md-4 text-dark text-center">this website.</h2>
+                                        <h2 class="display-3 display-md-4 text-dark text-center">employee summary.</h2>
                                         <div class="row">
                                             <div class="frame col-md-6 img-fluid">
-                                                <img class="d-block text-dark img-fluid" src="this_site.png" alt="thumbnail of this site">
+                                                <img class="d-block text-dark img-fluid" src="employee-summary.png" alt="thumbnail of this site">
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
-                                            <p>Using HTML, CSS, and the bootstrap framework, I created <a class="sm-text-decoration-none" href="#home" target="_blank">this portfolio website</a> for myself.</p>
+                                            <p>I created an <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">Employee Summary</a> generator. It allows you to generate an employee roster using the command line. See <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">README</a> for installation/usage instructions. </p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href="#home" target="_blank">Check it out here</a>
+                                                    <a class="p-2 " href=" https://tasha876.github.io/Employee-Summary/" target="_blank">Check out a sample site here</a>
                                                 </div>
                                         </div>
                                         </div>
