fixed an error in the description for 'eat da burger'

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                     <div class="jumbotron pb-2 m-0">
                                         <h1 class="display-3 text-dark text-center">Here's what I've done.</h1> 
                                         <div class="project-list text-center">
+                                            <h3 class="d-inline"><a class="text-nowrap" href="#eat-da-burger">eat da burger</a></h3>
                                             <h3 class="d-inline"><a class="text-nowrap" href="#servicely">servicely</a></h3>
                                             <h3 class="d-inline"><a class="text-nowrap" href="#pass-gen">password generator</a></h3>
                                             <h3 class="d-inline"><a class="text-nowrap" href="#employee-summary">employee summary</a></h3>
@@ -94,6 +95,28 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!---------------------------------------project: Eat da Burger------------------------------------------->
+                        <article id="eat-da-burger" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
+                            <div class="row w-100 my-auto"> 
+                                <div class="col-md-12">
+                                    <div class="jumbotron py-3 m-0">
+                                        <h2 class="display-3 display-md-4 text-dark text-center">eat da burger.</h2>
+                                        <div class="row">
+                                            <div class="frame col-md-6 img-fluid">
+                                                <img class="d-block text-dark img-fluid" src="eat-da-burger.png" alt="thumbnail of this site">
+                                            </div>
+                                        <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
+                                            <p>I created a burger logger called <a class="sm-text-decoration-none" href="https://tasha876-burger.herokuapp.com/" target="_blank"></a>Eat da Burger</a>. It allows you to add, eat, and delete burgers! It also saves your current burgers and loads them for the next time.</p>
+                                                <div class="text-center">
+                                                    <a class="p-2 " href="https://tasha876-burger.herokuapp.com/" target="_blank">Check it out here</a>
+                                                </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
 
                         <!---------------------------------------project: servicely------------------------------------------->
                         <div id="projects">
@@ -161,6 +184,7 @@
                                 </div>
                             </div>
                         </article>
+
                     </div>
 
                     </div>
