--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <script src="https://unpkg.com/moment"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="40">
@@ -32,9 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Projects</a>
                     </li>
-                    <!--li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="#resume">Resum&eacute;</a>
-                    </li-->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -59,7 +58,7 @@
             </section>
 
             <!---------------------------------------about me------------------------------------------->
-            <section id="about_me" class="container d-flex align-items-center flex-column min-vh-100">
+            <section id="about_me" class="container-fluid d-flex align-items-center flex-column min-vh-100">
                 <div class="water"></div>
                 <div class="row w-100 my-auto"> 
                     <div class="col-md-12">
@@ -76,7 +75,7 @@
             </section>
 
             <!---------------------------------------portfolio------------------------------------------->
-            <section id="portfolio" class="container d-flex align-items-center flex-column min-vh-100">
+            <section id="portfolio" class="container-fluid d-flex align-items-center flex-column min-vh-100">
                 <div class="deep"></div>
                 <div class="row w-100 my-auto"> 
                     <div class="col-md-12">
@@ -96,6 +95,28 @@
                             </div>
                         </div>
 
+                        <!---------------------------------------project: Novelty------------------------------------------->
+                        <article id="novelty" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
+                            <div class="row w-100 my-auto"> 
+                                <div class="col-md-12">
+                                    <div class="jumbotron py-3 m-0">
+                                        <h2 class="display-3 display-md-4 text-dark text-center">eat da burger.</h2>
+                                        <div class="row">
+                                            <div class="frame col-md-6 img-fluid">
+                                                <img class="d-block text-dark img-fluid" src="images/NOVELty.png" alt="thumbnail of this site">
+                                            </div>
+                                        <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
+                                            <p>Working as a team, we created <a class="sm-text-decoration-none" href="https://novelty.herokuapp.com/" target="_blank"></a>NOVELty</a>. It allows you to add books that you have read or have finished reading, then recommends books to you based on your inputs.</p>
+                                                <div class="text-center">
+                                                    <a class="p-2 " href="https://novelty.herokuapp.com/" target="_blank">Check it out here</a>
+                                                </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
                         <!---------------------------------------project: Eat da Burger------------------------------------------->
                         <article id="eat-da-burger" class="container d-flex align-items-center flex-column min-vh-100 mx-0">
                             <div class="row w-100 my-auto"> 
@@ -104,7 +125,7 @@
                                         <h2 class="display-3 display-md-4 text-dark text-center">eat da burger.</h2>
                                         <div class="row">
                                             <div class="frame col-md-6 img-fluid">
-                                                <img class="d-block text-dark img-fluid" src="eat-da-burger.png" alt="thumbnail of this site">
+                                                <img class="d-block text-dark img-fluid" src="images/eat-da-burger.png" alt="thumbnail of this site">
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>I created a burger logger called <a class="sm-text-decoration-none" href="https://tasha876-burger.herokuapp.com/" target="_blank"></a>Eat da Burger</a>. It allows you to add, eat, and delete burgers! It also saves your current burgers and loads them for the next time.</p>
@@ -127,7 +148,7 @@
                                             <h2 class="display-3 display-md-4 text-dark text-center">servicely.</h2>
                                             <div class="row">
                                                 <div class="frame col-md-6 img-fluid">
-                                                    <img class="d-block text-dark" src="Servicely.png" alt="thumbnail of this site">
+                                                    <img class="d-block text-dark" src="images/Servicely.png" alt="thumbnail of this site">
                                                 </div>
                                             <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                                 <p>Working with a team, we created <a class="sm-text-decoration-none" href="https://tasha876.github.io/Servicely/index.html" target="_blank">Servicely</a> &mdash; an app that helps you either find help when your in need or help if you're feeling generous.</p>
@@ -149,7 +170,7 @@
                                         <h2 class="display-3 display-md-4 text-dark text-center">password generator.</h2>
                                         <div class="row">
                                             <div class="frame col-md-6 img-fluid">
-                                                <img class="d-block text-dark img-fluid" src="password-generator.png" alt="thumbnail of this site">
+                                                <img class="d-block text-dark img-fluid" src="images.password-generator.png" alt="thumbnail of this site">
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>I created a simple <a href="https://tasha876.github.io/Password-Generator/" target="_blank">password generator.</a> It generates strong passwords using Javascript.</p>
@@ -171,7 +192,7 @@
                                         <h2 class="display-3 display-md-4 text-dark text-center">employee summary.</h2>
                                         <div class="row">
                                             <div class="frame col-md-6 img-fluid">
-                                                <img class="d-block text-dark img-fluid" src="employee-summary.png" alt="thumbnail of this site">
+                                                <img class="d-block text-dark img-fluid" src="images/employee-summary.png" alt="thumbnail of this site">
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>I created an <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">Employee Summary</a> generator. It allows you to generate an employee roster using the command line. See <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">README</a> for installation/usage instructions. </p>
@@ -187,6 +208,20 @@
 
                     </div>
 
+                    </div>
+                </div>
+            </section>
+
+            <!---------------------------------------resume------------------------------------------->
+            <section id="resume" class="container d-flex align-items-center flex-column">
+                <div class="d-flex align-items-center flex-column min-vh-100">
+                    <div class="row w-100 my-auto"> 
+                        <div class="col-md-12">
+                            <div class="jumbotron pb-2 m-0 text-center">
+                                <h1 class="display-3 text-dark text-center">Want to know more?</h1>
+                                <h2><a href="./resume.html" target="_blank">Please see my resume.</a></h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
