--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
     <h1 class="display-3 text-center">Natasha Fray</h1>
 <p class="text-center">130 Fakestreet St W, Unit 321 Waterloo ON, N2A 1A1<br>
 519-555-5555 | natasha.fray9@gmail.com<br>
-<a href="https://www.linkedin.com/in/natasha-fray-926ba61b6/">LinkedIn</a> | <a href="https://github.com/Tasha876">GitHub </a> | <a href="https://tasha876.github.io/Online-Portfolio/">Portfolio</a></p>
+<a href="https://www.linkedin.com/in/natasha-fray-926ba61b6/" target="_blank">LinkedIn</a> | <a href="https://github.com/Tasha876" target="_blank">GitHub </a> | <a href="https://tasha876.github.io/Online-Portfolio/" target="_blank">Portfolio</a></p>
 
 </header>
 <h2 id="profile" class="display-4" >PROFILE:</h2>
