updated navbar to include links to projects in a sub-nav

--- a/index.html
+++ b/index.html
@@ -28,9 +28,27 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about_me">About Me</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Projects</a>
-                    </li>
+                        <div class="sub-nav">
+                          <li class="nav-item sub-nav">
+                          <a class="nav-link" href="#portfolio">Projects <i class="fa fa-caret-down"></i></a>
+                            <ul class="nav navbar-nav sub-nav-content">
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#novelty">NOVELty</a> 
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#eat-da-burger">Eat da Burger</a>
+                                </li> 
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#servicely">Servicely</a>
+                                </li> 
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#pass-gen">Password Generator</a>
+                                </li> 
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#employee-summary">Employee Summary</a>
+                                </li>  
+                            </ul>
+                          </li> 
+                        </div>
                     <li class="nav-item">
                         <a class="nav-link" href="#resume">Resum&eacute;</a>
                     </li>
@@ -110,9 +128,9 @@
                                               <div class="cover mx-auto"></div>
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
-                                            <p>Working as a team, we created <a class="sm-text-decoration-none" href="https://novelty.herokuapp.com/" target="_blank"></a>NOVELty</a>. It allows you to add books that you have read or have finished reading, then recommends books to you based on your input.</p>
+                                            <p>Working as a team, we created <a class="sm-text-decoration-none" href="https://novelty.herokuapp.com/" target="_blank">NOVELty</a>. It allows you to add books that you have read or have finished reading, then recommends books to you based on your input.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href="https://novelty.herokuapp.com/" target="_blank">Check it out here</a>
+                                                    <a href="https://novelty.herokuapp.com/" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -134,9 +152,9 @@
                                               <div class="cover mx-auto"></div>
                                             </div>
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
-                                            <p>I created a burger logger called <a class="sm-text-decoration-none" href="https://tasha876-burger.herokuapp.com/" target="_blank"></a>Eat da Burger</a>. It allows you to add, eat, and delete burgers! It also saves your current burgers and loads them for the next time.</p>
+                                            <p>I created a burger logger called <a class="sm-text-decoration-none" href="https://tasha876-burger.herokuapp.com/" target="_blank">Eat da Burger</a>. It allows you to add, eat, and delete (virtual!) burgers! It also saves your current burgers and loads them for the next time.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href="https://tasha876-burger.herokuapp.com/" target="_blank">Check it out here</a>
+                                                    <a href="https://tasha876-burger.herokuapp.com/" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -162,7 +180,7 @@
                                             <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                                 <p>Working with a team, we created <a class="sm-text-decoration-none" href="https://tasha876.github.io/Servicely/index.html" target="_blank">Servicely</a> &mdash; an app that helps you either find help when your in need or help if you're feeling generous.</p>
                                                     <div class="text-center">
-                                                        <a class="p-2" href="https://tasha876.github.io/Servicely/index.html" target="_blank">Check it out here</a>
+                                                        <a href="https://tasha876.github.io/Servicely/index.html" target="_blank">Check it out here</a>
                                                     </div>
                                             </div>
                                             </div>
@@ -187,7 +205,7 @@
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>I created a simple <a href="https://tasha876.github.io/Password-Generator/" target="_blank">password generator.</a> It generates strong passwords using Javascript.</p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href="https://tasha876.github.io/Password-Generator/" target="_blank">Check it out here</a>
+                                                    <a href="https://tasha876.github.io/Password-Generator/" target="_blank">Check it out here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -212,7 +230,7 @@
                                         <div class="col-md-6 my-auto call mx-auto mx-5 text-dark px-md-5 font-weight-normal">
                                             <p>I created an <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">Employee Summary</a> generator. It allows you to generate an employee roster using the command line. See <a class="sm-text-decoration-none" href="https://github.com/Tasha876/Employee-Summary" target="_blank">README</a> for installation/usage instructions. </p>
                                                 <div class="text-center">
-                                                    <a class="p-2 " href=" https://tasha876.github.io/Employee-Summary/" target="_blank">Check out a sample site here</a>
+                                                    <a href=" https://tasha876.github.io/Employee-Summary/" target="_blank">Check out a sample site here</a>
                                                 </div>
                                         </div>
                                         </div>
@@ -232,9 +250,9 @@
                 <div class="d-flex align-items-center flex-column min-vh-100">
                     <div class="row w-100 my-auto"> 
                         <div class="col-md-12">
-                            <div class="jumbotron pb-2 m-0 text-center">
+                            <div class="jumbotron call pb-2 m-0 text-center">
                                 <h1 class="display-3 text-dark text-center">Want to know more?</h1>
-                                <h2><a href="./resume.html" target="_blank">Please see my resume.</a></h2>
+                                <h2><a href="./resume.html" target="_blank">Please see my resum&eacute.</a></h2>
                             </div>
                         </div>
                     </div>
